using new core i18n api

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -50,9 +50,9 @@ item.repaired.all=<prefix> <white>All of your items got repaired
 item.repaired=<prefix> <white>Your item got repaired
 item.rename.fail=<prefix> <red>Failed to rename your item
 item.rename.success=<prefix> <white>Successfully renamed your item
-item.head.value=<prefix> <gray>Skull value<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'Click to Copy to Clipboard'><white><value>
+item.head.value=<prefix> <gray>Skull value<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
 item.head.player=<prefix> <gray>Skull owner<dark_gray>: <white><owner>
-item.head.url=<prefix> <gray>Skull url<dark_gray>: <click:copy_to_clipboard:'<full_url>'><hover:show_text:'Click to Copy to Clipboard'><white><url>
+item.head.url=<prefix> <gray>Skull url<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
 item.head.none=<prefix> <red>Could not find matching skull data
 item.head.received=<prefix> <white>You received a player head
 god.active.self=<prefix> <white>You are now invulnerable
