--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -47,9 +47,9 @@ item.repaired.all=<prefix> <white>Alle deine Items wurden repariert
 item.repaired=<prefix> <white>Dein Item wurde repariert
 item.rename.fail=<prefix> <red>Dein Item konnte nicht umbenannt werden
 item.rename.success=<prefix> <white>Dein Item wurde erfolgreich umbenannt
-item.head.value=<prefix> <gray>Kopf Wert<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'Klicken, um in die Zwischenablage zu kopieren'><white><value>
+item.head.value=<prefix> <gray>Kopf Wert<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
 item.head.player=<prefix> <gray>Kopf Besitzer<dark_gray>: <white><owner>
-item.head.url=<prefix> <gray>Kopf URL<dark_gray>: <click:copy_to_clipboard:'<full_url>'><hover:show_text:'Klicken, um in die Zwischenablage zu kopieren'><white><url>
+item.head.url=<prefix> <gray>Kopf URL<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
 item.head.none=<prefix> <red>Es konnte keine passenden Kopfdaten gefunden werden
 item.head.received=<prefix> <white>Du hast einen Spieler Kopf erhalten
 god.active.self=<prefix> <white>Du bist jetzt unverwundbar
