--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -59,3 +59,8 @@ god.active.self=<prefix> <white>You are now invulnerable
 god.active.others=<prefix> <green><player> <white>is now invulnerable
 god.inactive.self=<prefix> <white>You are no longer invulnerable
 god.inactive.others=<prefix> <green><player> <white>is no longer invulnerable
+broadcast.header=<reset>
+broadcast.format=<red>Server <grey>| <message>
+broadcast.footer=<reset>
+chat.format=<delete:'<signature>'><display_name><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
+chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
