--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Publish with Gradle to Hangar
-        uses: gradle/gradle-build-action@latest
+        uses: gradle/gradle-build-action@v2.9.0
         with:
           arguments: publishAllPublicationsToHangar
