--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@latest
+        uses: gradle/gradle-build-action@v2.9.0
         with:
           arguments: build
       - name: Upload a Build Artifact
