removed chat signature tag

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -62,5 +62,5 @@ god.inactive.others=<prefix> <green><player> <white>is no longer invulnerable
 broadcast.header=<reset>
 broadcast.format=<red>Server <gray>| <message>
 broadcast.footer=<reset>
-chat.format=<delete:'<signature>'><display_name><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
+chat.format=<delete><prefix><player><suffix><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
 chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
