added offline tp command

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -26,6 +26,11 @@ last.seen.time=<prefix> <green><player><white> was last seen <green><time>
 back.empty=<prefix> <red>You can't go back any further
 back.teleport.success=<prefix> <white>Teleported you to your last position
 back.teleport.fail=<prefix> <red>Failed to teleport you to your last position
+offline.teleport.success=<prefix> <green><source> <white>has been teleported to <green><target>
+offline.teleport.fail=<prefix> <red>Could not teleport <dark_red><source> <red>to <dark_red><target>
+offline.teleport.location=<prefix> <dark_red><player> <red>is already at this position
+offline.teleport.success.to=<prefix> <white>Teleported you to <green><player>
+offline.teleport.fail.to=<prefix> <red>Failed to teleport you to <dark_red><player>
 time.day=<prefix> <white>It is now day in <green><world>
 time.night=<prefix> <white>It is now night in <green><world>
 weather.rain=<prefix> <white>It is now raining in <green><world>
