--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -23,6 +23,11 @@ last.seen.time=<prefix> <green><player><white> war zuletzt online <green><time>
 back.empty=<prefix> <red>Du kannst nicht weiter zurück gehen
 back.teleport.success=<prefix> <white>Du wurdest zu deiner letzten Position teleportiert
 back.teleport.fail=<prefix> <red>Du konntest nicht zu deiner letzten Position teleportiert werden
+offline.teleport.success=<prefix> <green><source> <white>wurde zu <green><target> <white>teleportiert
+offline.teleport.fail=<prefix> <dark_red><source> <red>konnte nicht zu <dark_red><target> <red>teleportiert werden
+offline.teleport.location=<prefix> <dark_red><player> <red>ist bereits bei dieser Position
+offline.teleport.success.to=<prefix> <white>Du wurdest zu <green><player> <white>teleportiert
+offline.teleport.fail.to=<prefix> <red>Du konntest nicht zu <dark_red><player> <red>teleportiert werden
 time.day=<prefix> <white>Es ist jetzt Tag in <green><world>
 time.night=<prefix> <white>Es ist jetzt Nacht in <green><world>
 weather.rain=<prefix> <white>Es regnet jetzt in <green><world>
