converted to utf8

--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -9,18 +9,18 @@ world.not.affected=<prefix> <red>Die Welt <dark_red><world><red> ist nicht betro
 world.not.found=<prefix> <red>Die Welt <dark_red><world><red> existiert nicht
 hunger.satisfied.self=<prefix> <white>Dein Hunger wurde gestillt
 hunger.satisfied.others=<prefix> <green><player>'s<white> Hunger wurde gestillt
-health.restored.self=<prefix> <white>Du wurdest vollständig geheilt
-health.restored.others=<prefix> <green><player><white> wurde vollständig geheilt
-flight.disabled.others=<prefix> <green><player><white> kann nicht länger fliegen
+health.restored.self=<prefix> <white>Du wurdest vollstÃ¤ndig geheilt
+health.restored.others=<prefix> <green><player><white> wurde vollstÃ¤ndig geheilt
+flight.disabled.others=<prefix> <green><player><white> kann nicht lÃ¤nger fliegen
 flight.enabled.others=<prefix> <green><player>'s<white> kann ab jetzt fliegen
-flight.disabled.self=<prefix> <white>Du kannst nicht länger fliegen
+flight.disabled.self=<prefix> <white>Du kannst nicht lÃ¤nger fliegen
 flight.enabled.self=<prefix> <white>Du kannst ab jetzt fliegen
 ping.self=<prefix> <white>Du hast einen verbindungslatenz von <green><ping>ms
 ping.others=<prefix> <green><player><white> hat eine verbindungslatenz von <green><ping>ms
 hold.item=<prefix> <red>Du musst ein Item in der Haupthand halten
 last.seen.now=<prefix> <green><player><white> is aktuell online
 last.seen.time=<prefix> <green><player><white> war zuletzt online <green><time>
-back.empty=<prefix> <red>Du kannst nicht weiter zurück gehen
+back.empty=<prefix> <red>Du kannst nicht weiter zurÃ¼ck gehen
 back.teleport.success=<prefix> <white>Du wurdest zu deiner letzten Position teleportiert
 back.teleport.fail=<prefix> <red>Du konntest nicht zu deiner letzten Position teleportiert werden
 offline.teleport.success=<prefix> <green><source> <white>wurde zu <green><target> <white>teleportiert
@@ -33,13 +33,13 @@ time.night=<prefix> <white>Es ist jetzt Nacht in <green><world>
 weather.rain=<prefix> <white>Es regnet jetzt in <green><world>
 weather.sun=<prefix> <white>Es scheint jetzt die Sonne in <green><world>
 weather.thunder=<prefix> <white>Es gewittert jetzt in <green><world>
-item.lore.tip=<prefix> <red>Nutze <dark_red>\\n<red> für neue Zeile und <dark_red>\\t<red> für Einrückungen
+item.lore.tip=<prefix> <red>Nutze <dark_red>\\n<red> fÃ¼r neue Zeile und <dark_red>\\t<red> fÃ¼r EinrÃ¼ckungen
 item.lore.success=<prefix> <white>Die Beschreibung deines Items wurde erfolgreich angepasst
 item.lore.fail=<prefix> <red>Die Beschreibung deines Items konnte nicht angepasst werden
 inventory.full=<prefix> <red>Dein Inventar ist voll
 item.received=<prefix> <white>Du hast <green><amount> x <item><white> erhalten
-item.invalid=<prefix> <dark_red><item><red> ist kein gültiges Item
-enchantment.invalid=<prefix> <dark_red><enchantment><red> ist keine gültige Verzauberung
+item.invalid=<prefix> <dark_red><item><red> ist kein gÃ¼ltiges Item
+enchantment.invalid=<prefix> <dark_red><enchantment><red> ist keine gÃ¼ltige Verzauberung
 enchantment.not.applicable=<prefix> <red>Dieses enchantment ist nicht auf <dark_red><item><red> anwendbar
 enchantment.applied=<prefix> <white>Dein Item wurde mit <green><enchantment><white> verzaubert
 gamemode.changed.self=<prefix> <white>Du bist jetzt im <green><gamemode>
@@ -59,6 +59,6 @@ item.head.none=<prefix> <red>Es konnte keine passenden Kopfdaten gefunden werden
 item.head.received=<prefix> <white>Du hast einen Spieler Kopf erhalten
 god.active.self=<prefix> <white>Du bist jetzt unverwundbar
 god.active.others=<prefix> <green><player> <white>ist jetzt unverwundbar
-god.inactive.self=<prefix> <white>Du bist nicht länger unverwundbar
-god.inactive.others=<prefix> <green><player> <white>ist nicht länger unverwundbar
-chat.format.delete=<hover:show_text:'Klicke um diese Nachricht zu löschen'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
+god.inactive.self=<prefix> <white>Du bist nicht lÃ¤nger unverwundbar
+god.inactive.others=<prefix> <green><player> <white>ist nicht lÃ¤nger unverwundbar
+chat.format.delete=<hover:show_text:'Klicke um diese Nachricht zu lÃ¶schen'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
