--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -1,4 +1,4 @@
-prefix=<white>Tweaks <dark_gray>»<reset>
+prefix=<white>Tweaks <dark_gray>Â»<reset>
 command.usage=<prefix> <red><usage>
 command.permission=<prefix> <red>You have no rights <dark_gray>(<dark_red><permission><dark_gray>)
 command.sender=<prefix> <red>You cannot use this command
@@ -67,5 +67,5 @@ god.inactive.others=<prefix> <green><player> <white>is no longer invulnerable
 broadcast.header=<reset>
 broadcast.format=<red>Server <gray>| <message>
 broadcast.footer=<reset>
-chat.format=<delete><prefix><player><suffix><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
+chat.format=<delete><prefix><player><reset> <dark_gray>Â» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
 chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
