use parsed name instead of component name

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -2,8 +2,8 @@ prefix=<white>Tweaks <dark_gray>»<reset>
 command.usage=<prefix> <red><usage>
 command.permission=<prefix> <red>You have no rights <dark_gray>(<dark_red><permission><dark_gray>)
 command.sender=<prefix> <red>You cannot use this command
-player.joined=<prefix> <green><player> <white>joined the game
-player.left=<prefix> <green><player> <white>left the game
+player.joined=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>joined the game
+player.left=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>left the game
 player.not.online=<prefix> <red>The player <dark_red><player><red> is not online
 player.not.found=<prefix> <red>The player <dark_red><player><red> is unknown to us
 player.not.affected=<prefix> <red>The player <dark_red><player><red> is not affected
@@ -32,7 +32,9 @@ offline.teleport.location=<prefix> <dark_red><player> <red>is already at this po
 offline.teleport.success.to=<prefix> <white>Teleported you to <green><player>
 offline.teleport.fail.to=<prefix> <red>Failed to teleport you to <dark_red><player>
 time.day=<prefix> <white>It is now day in <green><world>
+time.noon=<prefix> <white>It is now noon in <green><world>
 time.night=<prefix> <white>It is now night in <green><world>
+time.midnight=<prefix> <white>It is now midnight in <green><world>
 weather.rain=<prefix> <white>It is now raining in <green><world>
 weather.sun=<prefix> <white>It is now sunny in <green><world>
 weather.thunder=<prefix> <white>It is now thundering in <green><world>
@@ -67,5 +69,5 @@ god.inactive.others=<prefix> <green><player> <white>is no longer invulnerable
 broadcast.header=<reset>
 broadcast.format=<red>Server <gray>| <message>
 broadcast.footer=<reset>
-chat.format=<delete><prefix><player><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
+chat.format=<delete><player_prefix><click:suggest_command:'/msg <player> '><player><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
 chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
