--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -1,7 +1,7 @@
 command.permission=<prefix> <red>Darauf hast du keine rechte <dark_gray>(<dark_red><permission><dark_gray>)
 command.sender=<prefix> <red>Du kannst diesen command nicht nutzen
-player.joined=<prefix> <green><player> <white>ist dem Spiel beigetreten
-player.left=<prefix> <green><player> <white>hat das Spiel verlassen
+player.joined=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>ist dem Spiel beigetreten
+player.left=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>hat das Spiel verlassen
 player.not.online=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht online
 player.not.found=<prefix> <red>Der Spieler <dark_red><player><red> ist uns nicht bekannt
 player.not.affected=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht betroffen
@@ -29,7 +29,9 @@ offline.teleport.location=<prefix> <dark_red><player> <red>ist bereits bei diese
 offline.teleport.success.to=<prefix> <white>Du wurdest zu <green><player> <white>teleportiert
 offline.teleport.fail.to=<prefix> <red>Du konntest nicht zu <dark_red><player> <red>teleportiert werden
 time.day=<prefix> <white>Es ist jetzt Tag in <green><world>
+time.noon=<prefix> <white>Es ist jetzt Mittag in <green><world>
 time.night=<prefix> <white>Es ist jetzt Nacht in <green><world>
+time.midnight=<prefix> <white>Es ist jetzt Mitternacht in <green><world>
 weather.rain=<prefix> <white>Es regnet jetzt in <green><world>
 weather.sun=<prefix> <white>Es scheint jetzt die Sonne in <green><world>
 weather.thunder=<prefix> <white>Es gewittert jetzt in <green><world>
