clarified error message

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -5,7 +5,7 @@ command.sender=<prefix> <red>You cannot use this command
 player.joined=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>joined the game
 player.left=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>left the game
 player.not.online=<prefix> <red>The player <dark_red><player><red> is not online
-player.not.found=<prefix> <red>The player <dark_red><player><red> is unknown to us
+player.not.found=<prefix> <red>The player <dark_red><player><red> has never played before
 player.not.affected=<prefix> <red>The player <dark_red><player><red> is not affected
 world.not.affected=<prefix> <red>The world <dark_red><world><red> is not affected
 world.not.found=<prefix> <red>The world <dark_red><world><red> does not exist
