--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -3,7 +3,7 @@ command.sender=<prefix> <red>Du kannst diesen command nicht nutzen
 player.joined=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>ist dem Spiel beigetreten
 player.left=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>hat das Spiel verlassen
 player.not.online=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht online
-player.not.found=<prefix> <red>Der Spieler <dark_red><player><red> ist uns nicht bekannt
+player.not.found=<prefix> <red>Der Spieler <dark_red><player><red> war noch nie online
 player.not.affected=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht betroffen
 world.not.affected=<prefix> <red>Die Welt <dark_red><world><red> ist nicht betroffen
 world.not.found=<prefix> <red>Die Welt <dark_red><world><red> existiert nicht
