added /motd command

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -69,5 +69,6 @@ god.inactive.others=<prefix> <green><player> <white>is no longer invulnerable
 broadcast.header=<reset>
 broadcast.format=<red>Server <gray>| <message>
 broadcast.footer=<reset>
+motd.changed=<prefix> <white>Changed motd to <green><motd>
 chat.format=<delete><player_prefix><click:suggest_command:'/msg <player> '><player><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
 chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
