--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -64,3 +64,4 @@ god.active.others=<prefix> <green><player> <white>ist jetzt unverwundbar
 god.inactive.self=<prefix> <white>Du bist nicht länger unverwundbar
 god.inactive.others=<prefix> <green><player> <white>ist nicht länger unverwundbar
 chat.format.delete=<hover:show_text:'Klicke um diese Nachricht zu löschen'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
+motd.changed=<prefix> <white>Die motd ist jetzt <green><motd>
