--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -54,9 +54,13 @@ speed.walk.changed.others=<prefix> <green><player>'s <white>walk speed is now <g
 speed.fly.changed.self=<prefix> <white>Your fly speed is now <green><speed>
 speed.fly.changed.others=<prefix> <green><player>'s <white>fly speed is now <green><speed>
 item.repaired.all=<prefix> <white>All of your items got repaired
-item.repaired=<prefix> <white>Your item got repaired
+item.repaired.fail=<prefix> <red>Failed to repair your item
+item.repaired.success=<prefix> <white>Your item got repaired
 item.rename.fail=<prefix> <red>Failed to rename your item
 item.rename.success=<prefix> <white>Successfully renamed your item
+item.unbreakable.fail=<prefix> <red>Failed to make your item unbreakable
+item.unbreakable.success=<prefix> <white>Your item is now unbreakable
+item.unbreakable.removed=<prefix> <white>Your item is no longer unbreakable
 item.head.value=<prefix> <gray>Skull value<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
 item.head.player=<prefix> <gray>Skull owner<dark_gray>: <white><owner>
 item.head.url=<prefix> <gray>Skull url<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
