--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -51,9 +51,13 @@ speed.walk.changed.others=<prefix> <green><player>'s <white>Laufgeschwindigkeit 
 speed.fly.changed.self=<prefix> <white>Deine Fluggeschwindigkeit is jetzt <green><speed>
 speed.fly.changed.others=<prefix> <green><player>'s <white>Fluggeschwindigkeit ist jetzt <green><speed>
 item.repaired.all=<prefix> <white>Alle deine Items wurden repariert
-item.repaired=<prefix> <white>Dein Item wurde repariert
+item.repaired.fail=<prefix> <red>Dein Item konnte nicht repariert werden
+item.repaired.success=<prefix> <white>Dein Item wurde repariert
 item.rename.fail=<prefix> <red>Dein Item konnte nicht umbenannt werden
 item.rename.success=<prefix> <white>Dein Item wurde erfolgreich umbenannt
+item.unbreakable.fail=<prefix> <red>Dein Item konnte nicht unzerstörbar gemacht werden
+item.unbreakable.success=<prefix> <white>Dein Item ist jetzt unzerstörbar
+item.unbreakable.removed=<prefix> <white>Dein Item ist nicht länger unzerstörbar
 item.head.value=<prefix> <gray>Kopf Wert<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
 item.head.player=<prefix> <gray>Kopf Besitzer<dark_gray>: <white><owner>
 item.head.url=<prefix> <gray>Kopf URL<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
