added unenchant messages

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -47,6 +47,8 @@ item.invalid=<prefix> <dark_red><item><red> is not a valid item
 enchantment.invalid=<prefix> <dark_red><enchantment><red> is not a valid enchantment
 enchantment.not.applicable=<prefix> <red>This enchantment is not applicable on <dark_red><item>
 enchantment.applied=<prefix> <white>Applied <green><enchantment><white> to your item
+enchantment.removed=<prefix> <white>Removed <green><enchantment><white> from your item
+enchantment.absent=<prefix> <red>Your item does not have <dark_red><enchantment>
 gamemode.changed.self=<prefix> <white>You are now in <green><gamemode>
 gamemode.changed.others=<prefix> <green><player> <white>is now in <green><gamemode>
 speed.walk.changed.self=<prefix> <white>Your walk speed is now <green><speed>
