--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -42,8 +42,10 @@ inventory.full=<prefix> <red>Dein Inventar ist voll
 item.received=<prefix> <white>Du hast <green><amount> x <item><white> erhalten
 item.invalid=<prefix> <dark_red><item><red> ist kein gültiges Item
 enchantment.invalid=<prefix> <dark_red><enchantment><red> ist keine gültige Verzauberung
-enchantment.not.applicable=<prefix> <red>Dieses enchantment ist nicht auf <dark_red><item><red> anwendbar
+enchantment.not.applicable=<prefix> <red>Diese Verzauberung ist nicht auf <dark_red><item><red> anwendbar
 enchantment.applied=<prefix> <white>Dein Item wurde mit <green><enchantment><white> verzaubert
+enchantment.removed=<prefix> <white>Die Verzauberung <green><enchantment><white> wurde von deinem Item entfernt
+enchantment.absent=<prefix> <red>Dein Item ist nicht mit <dark_red><enchantment><red> verzaubert
 gamemode.changed.self=<prefix> <white>Du bist jetzt im <green><gamemode>
 gamemode.changed.others=<prefix> <green><player> <white>ist jetzt im <green><gamemode>
 speed.walk.changed.self=<prefix> <white>Deine Laufgeschwindigkeit is jetzt <green><speed>
