added /msg and /reply commands

--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -71,3 +71,7 @@ god.inactive.self=<prefix> <white>Du bist nicht länger unverwundbar
 god.inactive.others=<prefix> <green><player> <white>ist nicht länger unverwundbar
 chat.format.delete=<hover:show_text:'Klicke um diese Nachricht zu löschen'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
 motd.changed=<prefix> <white>Die motd ist jetzt <green><motd>
+message.out=<italic><gray>Du <dark_gray>-> <gray><receiver> <dark_gray>» <gray><message>
+message.in=<italic><gray><hover:show_text:'Klicke um zu Antworten'><click:suggest_command:'/msg <sender> '><sender></click></hover> <dark_gray>-> <gray>Dir <dark_gray>» <gray><hover:show_text:'<lang:chat.copy.click>'><click:copy_to_clipboard:'<message>'><message>
+message.self=<prefix> <red>Du kannst dir nicht selber schreiben
+conversation.running=<prefix> <red>Du hast keine laufende Konversation
