Add vanish command

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -13,6 +13,10 @@ hunger.satisfied.self=<prefix> <white>Your hunger has been satisfied
 hunger.satisfied.others=<prefix> <green><player>'s<white> hunger has been satisfied
 health.restored.self=<prefix> <white>Your health has been restored
 health.restored.others=<prefix> <green><player>'s<white> health has been restored
+vanish.enabled.self=<prefix> <white>You are now invisible to others
+vanish.disabled.self=<prefix> <white>You are now visible to others
+vanish.enabled.others=<prefix> <green><player> <white>is now invisible to others
+vanish.disabled.others=<prefix> <green><player> <white>is now visible to others
 flight.disabled.others=<prefix> <green><player><white> can no longer fly
 flight.enabled.others=<prefix> <green><player>'s<white> is now able to fly
 flight.disabled.self=<prefix> <white>You can no longer fly
