--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -11,6 +11,10 @@ hunger.satisfied.self=<prefix> <white>Dein Hunger wurde gestillt
 hunger.satisfied.others=<prefix> <green><player>'s<white> Hunger wurde gestillt
 health.restored.self=<prefix> <white>Du wurdest vollständig geheilt
 health.restored.others=<prefix> <green><player><white> wurde vollständig geheilt
+vanish.enabled.self=<prefix> <white>Du bist jetzt unsichtbar für andere
+vanish.disabled.self=<prefix> <white>Du bist wieder sichtbar für andere
+vanish.enabled.others=<prefix> <green><player> <white>ist jetzt unsichtbar für andere
+vanish.disabled.others=<prefix> <green><player> <white>ist wieder sichtbar für andere
 flight.disabled.others=<prefix> <green><player><white> kann nicht länger fliegen
 flight.enabled.others=<prefix> <green><player>'s<white> kann ab jetzt fliegen
 flight.disabled.self=<prefix> <white>Du kannst nicht länger fliegen
