Update prefix in extra-tweaks and remove unused one in tweaks
Revised the prefix format in `extra-tweaks.properties` to maintain consistency with `tweaks.properties`. Additionally, removed an unused prefix entry from `tweaks.properties` to enhance code cleanliness.

--- a/src/main/resources/extra-tweaks.properties
+++ b/src/main/resources/extra-tweaks.properties
@@ -49,7 +49,7 @@ gui.page.next=<!i><dark_gray>»</dark_gray> <gray>Next page</gray>
 gui.page.previous=<!i><dark_gray>»</dark_gray> <gray>Previous page</gray>
 gui.title.homes=Your Homes
 gui.title.warps=Warps
-prefix=<blue>Extras</blue> <dark_gray>»</dark_gray>
+prefix=<blue>Tweaks</blue> <dark_gray>»</dark_gray>
 social.discord=<gray><prefix> Chat with us on <u><click:open_url:'<discord>'><#535fee>Discord</click></u></gray>
 social.reddit=<gray><prefix> Check out our <u><click:open_url:'<reddit>'><#ff4500>Subreddit></click></u></gray>
 social.teamspeak=<gray><prefix> Talk with us on <u><hover:show_text:'Click to copy: <teamspeak>'><click:copy_to_clipboard:'<teamspeak>'><#1c2837>TeamSpeak</click></hover></u></gray>
