Update command syntax in join/leave messages
Replaced '/msg' with '/tell' in player join/leave messages for better command consistency across the application. This change affects both English and German property files.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -5,7 +5,7 @@ broadcast.footer=<reset>
 broadcast.format=<red>Server <gray>| <message>
 broadcast.header=<reset>
 chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
-chat.format=<delete><player_prefix><click:suggest_command:'/msg <player> '><player><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
+chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
 command.sender=<prefix> <red>You cannot use this command
 enchantment.absent=<prefix> <red>Your item does not have <dark_red><enchantment>
 enchantment.applied=<prefix> <white>Applied <green><enchantment><white> to your item
@@ -57,8 +57,8 @@ offline.teleport.success.to=<prefix> <white>Teleported you to <green><player>
 offline.teleport.success=<prefix> <green><source> <white>has been teleported to <green><target>
 ping.others=<prefix> <green><player>'s<white> connection latency is around <green><ping>ms
 ping.self=<prefix> <white>Your connection latency is around <green><ping>ms
-player.joined=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>joined the game
-player.left=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>left the game
+player.joined=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>joined the game
+player.left=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>left the game
 player.not.affected=<prefix> <red>The player <dark_red><player><red> is not affected
 player.not.found=<prefix> <red>The player <dark_red><player><red> has never played before
 player.not.online=<prefix> <red>The player <dark_red><player><red> is not online
