--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -52,8 +52,8 @@ offline.teleport.success.to=<prefix> <white>Du wurdest zu <green><player> <white
 offline.teleport.success=<prefix> <green><source> <white>wurde zu <green><target> <white>teleportiert
 ping.others=<prefix> <green><player><white> hat eine verbindungslatenz von <green><ping>ms
 ping.self=<prefix> <white>Du hast einen verbindungslatenz von <green><ping>ms
-player.joined=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>ist dem Spiel beigetreten
-player.left=<prefix> <green><click:suggest_command:'/msg <player> '><player><reset> <white>hat das Spiel verlassen
+player.joined=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>ist dem Spiel beigetreten
+player.left=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>hat das Spiel verlassen
 player.not.affected=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht betroffen
 player.not.found=<prefix> <red>Der Spieler <dark_red><player><red> war noch nie online
 player.not.online=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht online
